--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -26,7 +39,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
+    // spring andriod Core
+    compile 'org.springframework.android:spring-android-core:2.0.0.M4'
+    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M4'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
+    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
+
+
+
 }
 repositories {
     maven {
