--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.gondolin.canalstatus"
         minSdkVersion 21
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,24 +32,33 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:26.1.0'
+    } exclude module: 'httpclient'
+}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
+    compile 'com.android.volley:volley:1.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile 'com.android.support:multidex:1.0.3'
+    compile 'org.apache.commons:commons-lang3:3.0'
     // spring andriod Core
     compile 'org.springframework.android:spring-android-core:2.0.0.M4'
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M4'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-
-
-
-
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    compile 'com.googlecode.json-simple:json-simple:1.1'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
 }
 repositories {
     maven {
